opam-version: "2.0"
maintainer: "The Stan Development Team"
authors: "The Stan Development Team"
homepage: "https://github.com/stan-dev/stanc3"
bug-reports: "https://github.com/stan-dev/stanc3/issues"
synopsis: "The Stan transpiler (from Stan to C++ and beyond)."
depends: [
  "ocaml" {= "4.07.0"}
  "dune" {= "1.11.4"}
  "ocamlformat" {= "0.8"}
  "core_kernel" {= "v0.11.1"} 
  "menhir" {= "20181113"}
  "ppx_deriving" {= "4.2.1"}
  "fmt" {= "0.8.5"}
  "yojson" {= "1.7.0"}
  "ocp-indent"
  "patdiff"
]
build: [
  [
    "dune" "build" "-p" name "-j" jobs
    "@install"
  ]
]