(library
  (name stanclib)
  (libraries core_kernel str menhirLib)
  (inline_tests)
  (preprocess (pps ppx_jane)))

(ocamllex lexer)

(rule
 (targets parsing_errors.ml)
 (deps parser.mly parser.messages)
 (action
  (with-stdout-to %{targets}
   (run menhir
    --explain
    --strict
    --unused-tokens parser.mly --compile-errors parser.messages))))

(menhir
 (modules parser)
 (flags :standard --table --strict --unused-tokens --fixed-exception))
