(library
 (name frontend)
 (public_name stanc.frontend)
 (libraries core menhirLib yojson fmt middle stan_math_signatures)
 (instrumentation
  (backend bisect_ppx))
 (modules
  :standard
  \
  parser_strip_redundant_state
  parser_add_missing_messages)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_deriving.fold ppx_deriving.map)))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags :standard --table --strict --require-aliases))

(rule
 (with-stdout-to
  parsing_errors.ml
  (run
   menhir
   --explain
   --strict
   --unused-tokens
   %{dep:parser.mly}
   --compile-errors
   %{dep:parser.messages})))

(rule
 (with-stdout-to
  parser_updated.messages
  (run menhir %{dep:parser.mly} --update-errors %{dep:parser.messages})))

(rule
 (with-stdout-to
  parser_new.messages
  (run menhir --list-errors %{dep:parser.mly})))

(executable
 (name parser_strip_redundant_state)
 (modules parser_strip_redundant_state)
 (libraries str core))

(rule
 (with-stdin-from
  %{dep:parser_updated.messages}
  (with-stdout-to
   parser_trimmed.messages
   (run ./parser_strip_redundant_state.exe))))

(executable
 (name parser_add_missing_messages)
 (modules parser_add_missing_messages)
 (libraries str))

(rule
 (with-stdout-to
  parser_updated_trimmed.messages
  (progn
   (cat %{dep:parser_trimmed.messages})
   (pipe-stderr
    (with-accepted-exit-codes
     (or 0 1)
     (ignore-stdout
      (run
       menhir
       %{dep:parser.mly}
       --compare-errors
       %{dep:parser_new.messages}
       --compare-errors
       %{dep:parser_trimmed.messages})))
    (run ./parser_add_missing_messages.exe)))))

(rule
 (alias update_messages)
 (action
  (diff parser.messages parser_updated_trimmed.messages)))

(rule
 (alias runtest)
 (action
  (run
   menhir
   parser.mly
   --compare-errors
   %{dep:parser_new.messages}
   --compare-errors
   %{dep:parser.messages})))
