(library
 (name stan_math_backend)
 (public_name stanc.stan_math_backend)
 (libraries core re fmt middle yojson)
 (instrumentation
  (backend bisect_ppx))
 (private_modules
  mangle
  cpp_Json
  cpp_str
  lower_expr
  lower_stmt
  lower_functions
  numbering)
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_deriving.map ppx_deriving.fold ppx_deriving.make)))
