(library
 (name stan_math_signatures)
 (public_name stanc.stan_math_signatures)
 (libraries core fmt common middle)
 (instrumentation
  (backend bisect_ppx))
 (modules :standard \ generate)
 (private_modules generated_signatures)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(executable
 (name generate)
 (modules generate)
 (preprocess
  (pps ppx_jane ppx_deriving.show))
 (libraries core common middle))

(rule
 (targets Generated_signatures.ml)
 (deps
  (:generate ./generate.exe))
 (action
  (run %{generate} %{targets})))
