(library
 (name stan_math_signatures)
 (public_name stanc.stan_math_signatures)
 (libraries core fmt common middle)
 (instrumentation
  (backend bisect_ppx))
 (modules :standard \ generate)
 (private_modules generated_signatures)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(executable
 (name generate)
 (modules generate)
 (preprocess
  (pps ppx_jane ppx_deriving.show))
 (libraries core common middle))

(rule
 (enabled_if
  (>= %{ocaml_version} 5.4))
 (action
  (with-stdout-to
   Generated_signatures.ml
   (run ./generate.exe))))

; for now, maintain source compatibility older OCaml versions
; TODO: remove this at some point when we are using other features that require OCaml >= 5.4

(rule
 (enabled_if
  (< %{ocaml_version} 5.4))
 (action
  (pipe-stdout
   (run ./generate.exe)
   (with-stdout-to
    Generated_signatures.ml
    (run grep -v Gc.ramp)))))
