(executable
 (name stanc)
 (modes
  (byte c)
  (best exe))
 (libraries frontend middle stan_math_backend analysis_and_optimization)
 (instrumentation
  (backend bisect_ppx))
 (modules Stanc)
 (public_name stanc)
 (preprocess
  (pps ppx_jane)))

(env
 (static
  (flags
   (-ccopt -static)))
 (dev
  (flags
   (:standard -g))))
