(executable
 (name stanc)
 (modes
  (byte c)
  (best exe))
 (libraries core fmt cmdliner fmt.cli fmt.tty driver stan_math_signatures)
 (instrumentation
  (backend bisect_ppx))
 (modules Stanc CLI)
 (public_name stanc)
 (preprocess
  (pps ppx_jane)))

(rule
 (target
  (dir cmdliner-support))
 (deps stanc.exe)
 (action
  (ignore-stdout
   (run cmdliner install tool-support ./stanc.exe:stanc cmdliner-support))))

(install
 (section share_root)
 (dirs
  (cmdliner-support/share as .)))
