(executable
 (name stancjs)
 (libraries js_of_ocaml driver)
 (preprocess
  (pps ppx_jane))
 (modes js))

(env
 (dev
  (js_of_ocaml
   (flags
    "--pretty"
    "--no-inline"
    "--debug-info"
    "--disable"
    "staticeval"
    "--disable"
    "share"
    "--enable"
    "with-js-error"))))

(alias
 (name default)
 (deps stancjs.bc.js index.html))
