(executable
 (name stancjs)
 (libraries core fmt js_of_ocaml driver stan_math_signatures)
 (preprocess
  (pps ppx_jane))
 (modes js))

(env
 (release
  (js_of_ocaml
   (flags
    (:standard "--opt" "3"))))
 (dev
  (js_of_ocaml
   (sourcemap no)
   (flags
    "--pretty"
    "--no-inline"
    "--debug-info"
    "--enable"
    "deadcode"
    "--enable"
    "globaldeadcode"
    "--disable"
    "staticeval"
    "--disable"
    "share"
    "--enable"
    "with-js-error"))))

(alias
 (name default)
 (deps stancjs.bc.js))
