(executable
 (name run_bin_on_args)
 (libraries core_kernel))

(rule
 (targets examples-bad.output)
 (deps (package stanc))
 (action
  (with-stdout-to %{targets}
   (run %{exe:run_bin_on_args.exe} %{bin:stanc} examples-bad))))

(alias
 (name runtest)
 (action (diff examples-bad.expected examples-bad.output)))

;; (rule
;;  (targets examples-good-pretty.output)
;;  (deps (package stanc) (:stanfiles (glob_files examples-good/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/discrete/poisson/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/discrete/neg_binomial_2/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/discrete/neg_binomial/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/discrete/hypergeometric/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/discrete/binomial/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/discrete/beta_binomial/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/discrete/bernoulli/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/wiener/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/weibull/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/von_mises/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/uniform/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/student_t/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/std_normal/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/skew_normal/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/scaled_inv_chi_square/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/rayleigh/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/pareto_type_2/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/pareto/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/normal/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/lognormal/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/logistic/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/inv_gamma/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/inv_chi_square/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/gumbel/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/gamma/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/frechet/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/exponential/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/exp_mod_normal/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/double_exponential/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/chi_square/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/cauchy/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/beta_proportion/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/beta/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/multivariate/discrete/ordered_probit/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/multivariate/discrete/ordered_logistic/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/multivariate/discrete/multinomial/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/multivariate/discrete/categorical/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/discrete/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/continuous/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/multivariate/discrete/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/multivariate/continuous/*.stan)
;;                                    (glob_files examples-good/mcmc/hmc/integrators/*.stan)
;;                                    (glob_files examples-good/mcmc/hmc/hamiltonians/*.stan)
;;                                    (glob_files examples-good/mcmc/hmc/common/*.stan)
;;                                    (glob_files examples-good/function-signatures/math/operators/*.stan)
;;                                    (glob_files examples-good/function-signatures/math/matrix/*.stan)
;;                                    (glob_files examples-good/function-signatures/math/functions/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/univariate/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/multivariate/*.stan)
;;                                    (glob_files examples-good/mcmc/hmc/*.stan)
;;                                    (glob_files examples-good/function-signatures/math/*.stan)
;;                                    (glob_files examples-good/function-signatures/distributions/*.stan)
;;                                    (glob_files examples-good/vec-expr/*.stan)
;;                                    (glob_files examples-good/variational/*.stan)
;;                                    (glob_files examples-good/stat_comp_benchmarks_models/*.stan)
;;                                    (glob_files examples-good/services/*.stan)
;;                                    (glob_files examples-good/runtime_errors/*.stan)
;;                                    (glob_files examples-good/parser-generator/*.stan)
;;                                    (glob_files examples-good/optimization/*.stan)
;;                                    (glob_files examples-good/model/*.stan)
;;                                    (glob_files examples-good/mcmc/*.stan)
;;                                    (glob_files examples-good/lang/*.stan)
;;                                    (glob_files examples-good/indexing/*.stan)
;;                                    (glob_files examples-good/function-signatures/*.stan)
;;                                    (glob_files examples-good/for_loops/*.stan)
;;                                    (glob_files examples-good/compound-assign/*.stan)
;;                                    (glob_files examples-good/array-expr/*.stan)))
;;  (action
;;   (with-stdout-to %{targets}
;;    (run %{exe:run_bin_on_args.exe} "%{bin:stanc} --auto-format --include_paths=included" %{stanfiles}))))
;;
;; (alias
;;  (name runtest)
;;  (action (diff examples-good-pretty.expected examples-good-pretty.output)))
