(executable
 (name run_js_on_args)
 (public_name run_js_on_args)
 (libraries core_kernel core_kernel.caml_unix)
 (modes exe))

(rule
 (targets stancjs.output)
 (deps
  ../../src/stancjs/stancjs.bc.js
  (:jsfiles
   (glob_files *.js))
  utils/utils.js)
 (action
  (with-stdout-to
   %{targets}
   (run %{bin:run_js_on_args} %{jsfiles}))))

(rule
 (alias runjstest)
 (action
  (diff stancjs.expected stancjs.output)))
