(executable
 (name run_js_on_args)
 (libraries core unix)
 (modes exe))

(rule
 (targets stancjs.output)
 (deps
  ../../src/stancjs/stancjs.bc.js
  (:jsfiles
   (glob_files *.js))
  utils/utils.js)
 (action
  (with-stdout-to
   %{targets}
   (run ./run_js_on_args.exe %{jsfiles}))))

(rule
 (alias runjstest)
 (action
  (diff stancjs.expected stancjs.output)))
