(rule
 (targets canonical.output)
 (deps
  (package stanc)
  (:stanfiles
   (glob_files *.stan)))
 (action
  (with-stdout-to
   %{targets}
   (run %{bin:run_bin_on_args} "%{bin:stanc} --print-canonical" %{stanfiles}))))

(rule
 (alias runtest)
 (action
  (diff canonical.expected canonical.output)))
