(rule
 (targets pretty.output)
 (deps (package stanc) (:stanfiles (glob_files *.stan)))
 (action
  (with-stdout-to %{targets}
   (run %{bin:run_bin_on_args} "%{bin:stanc} --auto-format" %{stanfiles}))))

(alias
 (name runtest)
 (action (diff pretty.expected pretty.output)))

;; (rule
;;  (targets cpp.output)
;;  (deps (package stanc) (:stanfiles (glob_files *.stan)))
;;  (action
;;   (with-stdout-to %{targets}
;;    (run %{bin:run_bin_on_args} "%{bin:stanc}" %{stanfiles}))))
;;
;; (alias
;;  (name runtest)
;;  (action (diff cpp.expected cpp.output)))