(rule
 (targets pretty.output)
 (deps
  (package stanc)
  (:stanfiles
   (glob_files *.stan)))
 (action
  (with-stdout-to
   %{targets}
   (run
    %{project_root}/test/integration/run_bin_on_args.exe
    "%{bin:stanc} --auto-format"
    %{stanfiles}))))

(rule
 (alias runtest)
 (action
  (diff pretty.expected pretty.output)))
