(rule
 (targets stanc.output)
 (deps
  (package stanc)
  (:stanfiles
   (glob_files *.stan))
  (:stanfiles-no-include-path stanc_helper_with_good_include.stan))
 (action
  (with-stdout-to
   %{targets}
   (progn
    (run
     %{project_root}/test/integration/run_bin_on_args.exe
     "%{bin:stanc} --include-paths=\"../included\" "
     %{stanfiles})
    (run
     %{project_root}/test/integration/run_bin_on_args.exe
     "%{bin:stanc}"
     %{stanfiles-no-include-path})))))

(rule
 (alias runtest)
 (action
  (diff stanc.expected stanc.output)))
