(rule
 (targets pretty.output)
 (deps
  (package stanc)
  (:stanfiles
   (glob_files *.stan)))
 (action
  (with-stdout-to
   %{targets}
   (run %{bin:run_bin_on_args}
     "%{bin:stanc} --include-paths=\".\" --auto-format --allow-undefined"
     %{stanfiles}))))

(rule
 (alias runtest)
 (action
  (diff pretty.expected pretty.output)))
