(rule
 (targets pretty.output)
 (deps
  (package stanc)
  (:stanfiles
   (glob_files *.stan)))
 (action
  (with-stdout-to
   %{targets}
   (run
    %{bin:run_bin_on_args}
    "%{bin:stanc} --include-paths=\".\" --auto-format --allow-undefined"
    %{stanfiles}))))

(rule
 (targets inlined.output)
 (deps
  (package stanc)
  (:stanfiles
   (glob_files *.stan)))
 (action
  (with-stdout-to
   %{targets}
   (run
    %{bin:run_bin_on_args}
    "%{bin:stanc} --include-paths=\".\" --auto-format --canonicalize=includes --allow-undefined"
    %{stanfiles}))))

(rule
 (alias runtest)
 (action
  (diff pretty.expected pretty.output)))

(rule
 (alias runtest)
 (action
  (diff inlined.expected inlined.output)))
