(rule
 (targets eight_schools.py.output)
 (deps (package stanc) (:stanfiles ../good/code-gen/eight_schools_ncp.stan))
 (action
  (with-stdout-to %{targets}
   (run %{bin:stan2tfp} %{stanfiles}))))

(alias
 (name runtest)
 (action (diff eight_schools.py eight_schools.py.output)))

;; TODO: how to define all of these for any .stan files?
(rule
 (targets irt2pl.py.output)
 (deps (package stanc) (:stanfiles ../good/stat_comp_benchmarks_models/irt_2pl.stan))
 (action
  (with-stdout-to %{targets}
   (run %{bin:stan2tfp} %{stanfiles}))))

(rule
 (targets normal_lub.py.output)
 (deps (package stanc) (:stanfiles normal_lub.stan))
 (action
  (with-stdout-to %{targets}
   (run %{bin:stan2tfp} %{stanfiles}))))

(alias
 (name runtest)
 (action (diff irt2pl.py irt2pl.py.output)))

(alias
 (name runtest)
 (action (diff normal_lub.py normal_lub.py.output)))
